<resources>
    <string name="app_name">Contact Example</string>
    <string name="name_field">Name</string>
    <string name="age_field">Age</string>
    <string name="school_field">Schools (separate with semicolons)</string>
    <string name="contact_error">Please fill all fields properly</string>
    <string name="name_display">Name: %1$s</string>
    <string name="age_display">Age: %1$s</string>
    <string name="school_display">Schools: %1$s</string>
    <string name="nationality_display">Nationality: %1$s</string>"
    <string name="gender_display">Gender: %1$s</string>
    <string name="course_display">Courses: %1$s</string>"

</resources>