<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewContactActivity">

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_display"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="18dp" />

    <TextView
        android:id="@+id/ageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_display"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDisplay" />

    <TextView
        android:id="@+id/schoolDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school_display"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageDisplay" />

    <TextView
        android:id="@+id/nationalityDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nationality_display"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolDisplay" />

    <TextView
        android:id="@+id/genderDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_display"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nationalityDisplay" />

    <TextView
        android:id="@+id/courseDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderDisplay" />
</androidx.constraintlayout.widget.ConstraintLayout>